# EndlessRunner

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: FindSDL2.cmake
src/: AnimationMgr.cpp  AnimationMgr.h  BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Coin.cpp  Coin.h  Collideable.cpp  Collideable.h  Collider.h  EndlessCliff.cpp  EndlessCliff.h  Game.cpp  Game.h  Global.cpp  Global.h  Hero.cpp  Hero.h  Input.h  Island.cpp  Island.h  ScreenRenderer.cpp  ScreenRenderer.h  SoundMgr.cpp  SoundMgr.h  Sphere.cpp  Sphere.h  main.cpp
